--- a/solita/src/componentes/card/card.css
+++ b/solita/src/componentes/card/card.css
@@ -1,5 +1,5 @@
 .card:hover {
-    box-shadow: 5px 10px 20px 1px rgba(19, 15, 15, 0.273) !important;
+    box-shadow: 8px 10px 20px 10px rgb(250, 5, 5) !important;
     transition: all 0.7s linear;
   }
   
@@ -10,6 +10,7 @@
   .card-text {
     padding: 0.3rem 1rem;
     font-size: 1rem;
+    height: 150px;
   }
   
   .overflow {
