--- a/solita/src/componentes/carusel/items.css
+++ b/solita/src/componentes/carusel/items.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Varela+Round);
+
 
 
 
@@ -22,18 +22,29 @@
   background-size: cover;
     
 }  */
+.gif{
+    float: right;
+    
+    padding: 10px; 
+    margin: 2em;
+    border: 2px solid black; 
+     width: 250px;
+     height: 200px;
+    
+}
 .text h3 {
     position: relative; border: 2px ; width: 200px;
-    font-family:'Pacifico', cursive;
+    
     text-align: center;
     letter-spacing: 3px;
     position: relative;
-    word-spacing: 5px;    
+    word-spacing: 5px;
+    padding: 1em;    
 
 }
 .text h4 {
     
-    font-family:'Pacifico', cursive;
+    
     font-size: x-large; 
     font-weight: 500;
     text-align: left;
