--- a/solita/src/componentes/cities/cities.css
+++ b/solita/src/componentes/cities/cities.css
@@ -35,7 +35,7 @@ margin-bottom: 3em;
   
 }
 .blog-card .ruta{ 
-color:rgb(250, 9, 9);
+color:#f6e70a;
   text-decoration:none;
   transition:all 0.2s
 }
