--- a/solita/src/componentes/card/card.css
+++ b/solita/src/componentes/card/card.css
@@ -1,5 +1,5 @@
 .card:hover {
-    box-shadow: 8px 10px 20px 10px rgb(250, 5, 5) !important;
+    box-shadow: 8px 10px 20px 10px #f6e70a !important;
     transition: all 0.7s linear;
   }
   
