--- a/solita/src/componentes/city/comentarios.css
+++ b/solita/src/componentes/city/comentarios.css
@@ -1,5 +1,5 @@
 
-.inputBoton{
+/* .inputBoton{
     width: 15em;
     height: 42px;
     padding-left: 1em;
@@ -31,4 +31,33 @@
 .accordion-collapse{
     background: rgba(201, 215, 219, 0.212)!important;
     
-}
+} */
+
+.itineraryTextarea{
+    width: 100%;
+    height: 50px;
+    padding-left: 1em;
+    border: solid 2px #f6e70a;
+    box-shadow: 5px 5px 10px #f6e70a;
+    border-radius: 20px;
+    
+  }
+  .contentComment{
+    width: 100%;
+  }
+  .styleInput{
+    width: 100%;
+    height: 50px;
+    padding-left: 1em;
+    border: solid 2px #f6e70a;
+    border-radius: 20px;
+    margin-bottom: 1em;
+  }
+  .accordion-button{
+    background-color: rgb(239, 244, 179);
+    border: solid 2px #f6e70a;
+    /* border-radius: 20px !important; */
+  }
+  .accordion-item{
+    border-radius: 3px !important;
+  }
