--- a/solita/src/componentes/buscador/search.css
+++ b/solita/src/componentes/buscador/search.css
@@ -1,18 +1,19 @@
-.container-1{
+.con{
     width: 300px;
     vertical-align: middle;
     white-space: nowrap;
-    position: relative;
+    position: center;
+    padding-left: 3em;
   }
-  .container-1 input#search{
+  .con input#search{
     width: 300px;
     height: 50px;
-    background: #2b303b;
+    background: #f6e70a;
     border: none;
     font-size: 10pt;
     float: left;
     color: #63717f;
-    padding-left: 45px;
+    padding-left: 50px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -23,22 +24,22 @@
     -o-transition: background .55s ease;
     transition: background .55s ease;
   }
-  .container-1 input#search::-webkit-input-placeholder {
+  .con input#search::-webkit-input-placeholder {
     color: #65737e;
  }
   
- .container-1 input#search:-moz-placeholder { /* Firefox 18- */
+ .con input#search:-moz-placeholder { /* Firefox 18- */
     color: #65737e;  
  }
   
- .container-1 input#search::-moz-placeholder {  /* Firefox 19+ */
+ .con input#search::-moz-placeholder {  /* Firefox 19+ */
     color: #65737e;  
  }
   
- .container-1 input#search:-ms-input-placeholder {  
+ .con input#search:-ms-input-placeholder {  
     color: #65737e;  
  }
- .container-1 .icon{
+ .con .icon{
     position: absolute;
     top: 50%;
     margin-left: 17px;
@@ -46,7 +47,7 @@
     z-index: 1;
     color: #4f5b66;
   }
-  .container-1 input#search:hover, .container-1 input#search:focus, .container-1 input#search:active{
+  .con input#search:hover, .con input#search:focus, .con input#search:active{
     outline:none;
     background: #ffffff;
   }
