--- a/solita/src/componentes/cities/cities.css
+++ b/solita/src/componentes/cities/cities.css
@@ -1,13 +1,17 @@
 /* @import url(//fonts.googleapis.com/css?family=Abril+Fatface|Droid+Serif:400,700,400italic,700italic); */
 
-body {
-  /* background: rgb(2,0,36); */
-/* background color: #000; */
-  /* font-family: 'Droid Serif', serif; */
-  background-color: #323131;
+ body {
+  
+   background-color: #4e4c4c;
+ 
+}  
+.tex {
+   padding-top: 2em;
+
+
 }
 .contenedor {
-  padding: 4em;
+  padding: 3em;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
